refactor: 審查修復 Batch 1 T1/T2/T3
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>